--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/O-clock-Sushi/pet-foster-connect-front#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-xss-sanitizer": "^2.0.0",
     "pg": "^8.15.1",
     "react-router-dom": "^7.5.1",
     "sequelize": "^6.37.7"
